fix: 테스트의 lotto list 가변 list 로 변경