@@ -7,6 +7,8 @@ import lotto.data.Result;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -20,8 +22,8 @@ public class OutputViewTest extends NsTest {
     void printPurchaseLottoTest() {
         // given
         List<Lotto> lottoList = List.of(
-                new Lotto(List.of(1, 2, 3, 4, 5, 6)),
-                new Lotto(List.of(7, 8, 9, 10, 11, 12))
+                new Lotto(Arrays.asList(1, 2, 3, 4, 5, 6)),
+                new Lotto(Arrays.asList(7, 8, 9, 10, 11, 12))
         );
         // when
         outputView.printPurchaseLotto(lottoList);
